--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^2.5.1",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.1.3",
+    "@studio-freight/lenis": "^1.0.42",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.38.4",
@@ -21,6 +22,7 @@
     "cookies-next": "^4.1.0",
     "framer-motion": "^12.34.3",
     "js-cookie": "^3.0.5",
+    "lenis": "^1.3.17",
     "lodash.debounce": "^4.0.8",
     "next": "^13.5.7",
     "postmark": "^4.0.2",
